@startuml

abstract class AbstractTask


AbstractTask <|-- Task
AbstractTask <|-- DefaultTask

Imputation "*" -- "1" AbstractTask
Task "1" -- "*" TaskRevision
Task "1" -- "1" State
Milestone "1" -- "1" MilestoneType
Task -- "1" TaskType
Task  -- "1" Milestone
Task "*" -- "1" Project
TaskRevision -- "1" Account :assignee
Task -- "1" Account :assignee
Imputation  -- "1" Account
Project "*" -- "*" Account
Project -- "*" Milestone

class AbstractTask {
Long id
String name
String description
Date startDate
Date endDate
String origin
String remotePath
String remoteId
}


class Task {

Double originalEstimate
Double effortLeft

}

class TaskRevision {

double originalEstimate;
double effortLeft;
double effortSpent;
double realEffort;
Date revisionDate
}

enum State {
  OPEN
  IN_PROGRESS
  CLOSED
}
enum MilestoneType {
    BILL
    DELIVERY
    INPUT
    SCHEDULING
}

class TaskType {
  String typeName
}

class Imputation {
  Date day
  double value
}


class Milestone {
  String name
  Date date
}

@enduml